--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,389 @@
-.App {
+.img0{width: 47px; height: 45px; margin-right: 8px;}
+.top{height: 12px; background-color: rgb(161, 197, 228); }
+.main{
+  margin-top: 10px;
+  margin-left: 220px;
+  width: 700px;
+  margin-bottom: 0px;
+}
+.m0{font-size: 34px; margin-left: 570px; margin-bottom: 27px; margin-top: 26px;}
+.main0{ width: 40px; height: 40px;  margin-left: 12px; margin-right: 12px;}
+.main3{ width: 30px; height: 30;  margin-left: 12px; margin-right: 12px; padding-bottom: 2px;}
+.m1{font-size: 34px; margin-left: 350px; margin-bottom: 28px;}
+.main1{ width: 45px; height: 45px;  margin-left: 5px;}
+.m2{font-size: 34px; margin-left: 420px; margin-bottom: 28px; margin-top:3px;}
+.m3{font-size: 34px; margin-left: 305px; margin-bottom: 28px; margin-top:3px;}
+.main2{ width: 40px; height: 40px; margin-left: 5px;}
+.logo{
+  padding-top: 32px; 
+  /*width:100%;*/ 
+  height: 95px;
+  background-color: #ffffff; 
+  color:#363636; 
+  font-size: 45px; 
+  margin-left: 585px;
+  font-family: monospace;}
+.bar{
+  padding-top: 11px;
+  padding-bottom: 11px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 0px; 
+  margin-bottom: 5px;
+  border-top: 2px solid rgb(134, 134, 134);
+  border-bottom: 2px solid rgb(134, 134, 134);
+  list-style: none;
+}
+.l{margin-left: 420px;}
+.l0{margin-left: 140px;}
+.l1{margin-left: 130px; margin-right: 195px;}
+.l2{font-size: 15px; margin-left: 29px;}
+.c{float:left;}
+.cart{width: 24px; height: 24px;}
+.bar li{font-family: sans-serif; display: inline; font-size: 22px;}
+.bar li a{text-decoration: none; color:black;} 
+.cat{margin-left: 40px; font-size: 21px; margin-bottom: 5px; /*position: fixed; top: 200px;*/}
+.category{
+  /*position: fixed; */
+  top: 257px;
+  
+  padding-top: 20px;
+  padding-left: 0px;
+  margin-left: 30px;
+  margin-top: 0px;
+  font-size: 22px;
+  background-color: rgba(190, 209, 229, 0.979);
+  width: 173px;
+  height: 418px;
+  border-radius: 2px;
+  list-style: none;
+  box-shadow: 3px 3px 3px rgba(184, 183, 183, 0.74);
+  border-radius: 5px;
+  
+}
+.category li{padding-left: 8px; padding-bottom: 5px; margin-bottom: 28px; border-bottom: 1px solid rgb(122, 146, 161)}
+.category li a{text-decoration: none; color:black;}
+
+.cont0{
+  clear: right;
+  margin-left: 250px;
+  margin-top: 0px;
+  font-size: 35px;
+  width: 1200px;
+  border: 1px solid rgb(255, 255, 255);
+}
+.cont{
+  clear: right;
+  margin-left: 250px;
+  margin-top: 22px;
+  font-size: 35px;
+  width: 1200px;
+  border: 1px solid rgb(255, 255, 255);
+}
+.cont3{
+  margin-left: 250px;
+  margin-top: 22px;
+  font-size: 35px;
+  width: 1200px;
+  border: 1px solid rgb(255, 255, 255);
+}
+.cont h2{text-align: center;}
+.bt{
+  margin-top: 25px;
+  margin-left: 50px;
+  font-size: 22px;
+  text-decoration: none; 
+  color:black;
+  background-color: rgb(184, 201, 224);
+  padding: 7px;
+  border-radius: 4px;
+
+}
+.contt{
+  margin-left: 250px;
+  margin-top: 22px;
+  font-size: 35px;
+  width: 1200px;
+  height: 520px;
+  border: 1px solid black;
+}
+.contt{
+  font-size: 24px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.info{
+  margin-left: 30px;
+  margin-top: 30px;
+  background-color: aliceblue;
+  width: 350px;
+  height: 490px;
+  font-size: 19px;
+  float: left;
+  box-shadow: 3px 3px 3px rgba(184, 183, 183, 0.74);
+  border-radius: 5px;
+}
+.info1{
+  margin-left: 30px;
+  margin-bottom: 25px;
+  background-color: aliceblue;
+  width: 350px;
+  height: 450px;
+  font-size: 19px;
+  float: left;
+  box-shadow: 3px 3px 3px rgba(184, 183, 183, 0.74);
+  border-radius: 5px;
+}
+.img{margin-left: 58px; width: 240px; height: 280px;}
+.info p{margin-left: 30px; font-family: sans-serif; color: black;}
+.info1 p{margin-left: 30px; font-family: sans-serif; color: black;}
+.dt{text-decoration: underline; color: black; margin-left: 30px; margin-bottom: 0px; background-color: rgba(203, 230, 252, 0.781)}
+.delete{margin-left: 15px; margin-top: 15px; background-color: rgb(102, 137, 233); border-color: rgba(240, 248, 255, 0); border-radius: 4px; margin-top: 0px; font-size: 18px; color:white;}
+.btt{margin-left: 320px; background-color: rgb(102, 137, 233); border-color: rgba(240, 248, 255, 0); border-radius: 4px; margin-top: 0px; font-size: 18px; color:white;}
+.btt1{float:right; margin-right: 150px; background-color: rgba(255, 255, 255, 0.979); font-size: 15px; border-radius: 3px; margin-top: 20px; font-size: 18px; }
+.bb{width: 0px; height: 0px;}
+.like{
+  float:right;
+  margin-right: 11px;
+  margin-left: 12px; 
+  background-color: rgba(255, 255, 255, 0);
+  border-color: rgba(255, 255, 255, 0);
+}
+.like1{
+  margin-top: 0px; 
+  margin-left: 17px; 
+  background-color: rgba(255, 255, 255, 0);
+  border-color: rgba(255, 255, 255, 0);
+}
+.like2{
+  margin-left: 150px;
+  margin-top: 0px;
+  width: 31px;
+  height: 31px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.dislike{
+  float:right;
+  margin-right: 11px;
+  margin-top: 0px;
+  margin-left: 15px; 
+  background-color: rgba(255, 255, 255, 0);
+  border-color: rgba(255, 255, 255, 0);
+}
+.dislike1{
+  margin-left: 150px;
+  margin-top: 0px;
+  width: 27px;
+  height: 26px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.edit{text-decoration: none; color: black; margin-left: 30px;}
+.layer{
+        width:350px;
+        height: 350px;
+        /*display: none;
+        position: absolute;*/
+        top: 80px;
+        left: 0;
+      
+        border: 0.1px solid lightgray;
+        background-color: white;
+
+        margin-left: 180px;
+        padding-left: 5px;
+        padding-right: 5px;
+}
+.detail{
+  margin-left: 270px;
+  margin-top: 30px;
+  font-size: 35px;
+  width: 1150px;
+  height: 510px;
+  border: 2px solid rgba(182, 182, 182, 0.897);
+  /*box-shadow: 10px 10px 10px grey;*/
+}
+.detail img {float: left; margin-left: 58px; width: 290px; height: 322px;}
+.detail h5 {text-align: center; margin-top: 15px; margin-bottom: 50px; font-weight: 400;}
+.detail p{font-size: 19px; margin-left: 18px;} 
+.detail1{border: 2px solid rgb(209, 209, 209); margin-left: 440px; width: 550px; border-radius: 9px;}
+
+.label{
+  margin-left: 400px;
+  text-align: left;
+  font-size: 17px; 
+  margin-bottom: 26px;
+}
+.box0{
+  margin-left: 10px; width: 250px; height: 21px;
+}
+.box1{
+  margin-left: 10px; width: 250px; height: 21px;
+}
+.box2{
+  margin-left: 43px; width: 250px; height: 21px;
+}
+.box3{
+  margin-left: 18px; width: 250px; height: 21px;
+}
+.box4{
+  margin-left: 25px; width: 250px; height: 21px;
+}
+.box5{
+  margin-left: 9px; width: 250px; height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.ti{margin-bottom: 20px;}
+.tii{margin-bottom: 30px;}
+.rbt{
+  margin-top: 0px;
+  margin-right: 260px;
+  font-size: 22px;
+  text-decoration: none; 
+  color:black;
+  background-color: rgb(184, 201, 224);
+  padding: 6px;
+  float: right;
+  border-radius: 4px;
+}
+.reviewName{text-align:center; margin-top: 7px; font-size: 31px; font-family: sans-serif; color: rgb(46, 46, 46);}
+.review{width: 800px; margin-left: 100px; list-style:none;}
+.reviewList{
+  border: 2px solid rgba(180, 180, 180, 0.836);
+  font-size: 17px;
+  margin-bottom: 1px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px rgba(184, 183, 183, 0.74);
+  border-radius: 5px;
+  font-family: sans-serif;
+}
+.reviewList span{margin-left: 9px;}
+.reviewList p{margin-left: 14px; margin-right: 14px;}
+.title{
+  background-color: aliceblue; 
+  font-weight: 4px; 
+  margin-top: 0px; 
+  padding-top: 8px;
+  padding-left: 5px;
+  border-radius: 5px 5px 0px 0px; 
+  border-bottom: 2px solid rgba(180, 180, 180, 0.836);
+  height: 35px;
+  font-size: 21px;
+}
+.img1{width: 180px; height: 190; }
+
+.content{
+  width: 500px; height: 150px;
+}
+.tit{width: 500px; margin-bottom: 8px;}
+.url{width: 500px; margin-top: 0px; margin-bottom: 7px;}
+
+.label1{margin-bottom: 0px; margin-top: 1px; text-align: left; margin-left: 345px; font-size: 20px;}
+.label2{font-size: 20px; margin-left: 7px;}
+
+.t1{
+  border: 2px solid rgb(179, 179, 179);
+  background-color: rgb(232, 246, 255);
+  border-radius: 10px; 
+  width: 330px; 
+  height: 60px; 
+  margin-left: 80px; 
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.r{
+  float: right;
+ 
+  margin-right: 15px; }
+.rr{
+  width: 29px; 
+  height: 29px;
+  padding-top: 1px;
+  margin-left: 5px;
+}
+.t{
+  font-size: 18px;
+  color: rgb(70, 70, 70);
+}
+
+.button{
+  background-color: rgb(102, 137, 233);
+  color: rgb(255, 255, 255);
+  border-color: rgba(240, 248, 255, 0);
+  width: 50px;
+  height: 30px;
+  border-radius: 4px;
+}
+.button1{float: left; 
+  margin-left: 10px; 
+  margin-top: 10px; 
+  background-color: white;
+  border-color: rgba(240, 248, 255, 0);
+  box-shadow: none;
+  outline: 0;}
+.button1 img{
+  margin-left:0px;
+  width: 42px;
+  height: 42px;}
+
+.join{
+  border: 1px solid rgb(90, 90, 90);
+  width: 500px;
+  height: 400px;
+  margin-left: 500px;
+  margin-top: 50px;
+  border-radius: 3px;
+}
+.jo{
+  border: 1px solid rgb(90, 90, 90);
+  width: 500px;
+  height: 400px;
+  margin-left: 500px;
+  margin-top: 50px;
+  border-radius: 3px;
+  background-color: white;
+}
+.jo1{ text-align: center; font-size: 24px; margin-top: 100px;}
+.jo2{ text-align: center; font-size: 21px; margin-bottom: 50px;}
+.join1{text-align: center; font-size: 20px; margin-bottom: 50px;}
+.join2{margin-left: 170px; margin-top: 8px;}
+.input {
+  margin-left: 170px;
+}
+.join3{ 
+  background-color: rgb(102, 137, 233);
+  color: rgb(255, 255, 255);
+  border-color: rgba(240, 248, 255, 0);
+  width: 50px;
+  height: 30px;
+  border-radius: 4px;
+  margin-left: 220px;
+  margin-top: 30px;
+}
+.logout{
+  background-color: rgb(102, 137, 233);
+  color: rgb(255, 255, 255);
+  border-color: rgba(240, 248, 255, 0);
+  width: 75px;
+  height: 35px;
+  border-radius: 4px;
+  margin-left: 210px;
+  margin-top: 5px;
+}
+.need{margin-left: 380px; margin-top: 150px; font-size: 25px; color: rgb(88, 88, 88)}
+
+.writer{margin-left: 5px; font-size: 14px; color: rgb(36, 36, 36);}
+
+.q{margin-top: 90px; text-align: center; margin-bottom: 5px;}
+.cname{margin-left: 40px; font-size: 25px;}
+.rd{
+  background-color: rgb(102, 137, 233);
+  color: rgb(255, 255, 255);
+  border-color: rgba(240, 248, 255, 0);
+  font-size: 17px;
+  width: 75px;
+  height: 35px;
+  border-radius: 4px;
+  margin-left: 710px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
